--- a/index.html
+++ b/index.html
@@ -2,33 +2,39 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Login Test - Uptrends RUM</title>
+  <title>Simulated Login - Uptrends RUM</title>
   <style>
     body { font-family: sans-serif; max-width: 400px; margin: 100px auto; }
-    input { display: block; margin-bottom: 10px; padding: 8px; width: 100%; }
-    button { padding: 10px; width: 100%; }
+    input, button { padding: 10px; width: 100%; margin-bottom: 10px; }
+    .message { font-weight: bold; margin-top: 20px; }
+    .success { color: green; }
+    .error { color: red; }
   </style>
-  <!-- Paste your Uptrends RUM script below -->
+  <!-- Paste your Uptrends RUM script below this line -->
 </head>
 <body>
   <h2>Login Page</h2>
-  <form onsubmit="return fakeLogin(event)">
-    <label for="username">Username:</label>
-    <input type="text" id="username" required>
-
-    <label for="password">Password:</label>
-    <input type="password" id="password" required>
-
+  <form onsubmit="return simulateLogin(event)">
+    <input type="text" id="username" placeholder="Username" required>
+    <input type="password" id="password" placeholder="Password" required>
     <button type="submit">Login</button>
   </form>
-
-  <div id="result" style="margin-top: 20px; font-weight: bold;"></div>
+  <div id="message" class="message"></div>
 
   <script>
-    function fakeLogin(e) {
+    function simulateLogin(e) {
       e.preventDefault();
-      const user = document.getElementById("username").value;
-      document.getElementById("result").textContent = `Welcome, ${user}! (Simulated Login)`;
+      const user = document.getElementById('username').value.trim();
+      const pass = document.getElementById('password').value;
+      const messageBox = document.getElementById('message');
+
+      if (user === 'admin' && pass === 'password123') {
+        messageBox.textContent = '✅ Login successful!';
+        messageBox.className = 'message success';
+      } else {
+        messageBox.textContent = '❌ Incorrect username or password.';
+        messageBox.className = 'message error';
+      }
     }
   </script>
 </body>
