--- a/index.html
+++ b/index.html
@@ -10,11 +10,10 @@
     .success { color: green; }
     .error { color: red; }
   </style>
-  <!-- Paste your Uptrends RUM script below this line -->
 </head>
 <body>
   <h2>Login Page</h2>
-  <form onsubmit="return simulateLogin(event)">
+  <form id="loginForm">
     <input type="text" id="username" placeholder="Username" required>
     <input type="password" id="password" placeholder="Password" required>
     <button type="submit">Login</button>
@@ -22,10 +21,11 @@
   <div id="message" class="message"></div>
 
   <script>
-    function simulateLogin(e) {
+    document.getElementById('loginForm').addEventListener('submit', function(e) {
       e.preventDefault();
       const user = document.getElementById('username').value.trim();
       const pass = document.getElementById('password').value;
+
       const messageBox = document.getElementById('message');
 
       if (user === 'admin' && pass === 'password123') {
@@ -35,7 +35,7 @@
         messageBox.textContent = '❌ Incorrect username or password.';
         messageBox.className = 'message error';
       }
-    }
+    });
   </script>
 </body>
 </html>
