--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Simulated Login - Uptrends RUM</title>
+  <title>Login - Uptrends RUM</title>
   <style>
     body { font-family: sans-serif; max-width: 400px; margin: 100px auto; }
     input, button { padding: 10px; width: 100%; margin-bottom: 10px; }
@@ -12,7 +12,7 @@
   </style>
 </head>
 <body>
-  <h2>Login Page</h2>
+  <h2>Login</h2>
   <form id="loginForm">
     <input type="text" id="username" placeholder="Username" required>
     <input type="password" id="password" placeholder="Password" required>
@@ -25,12 +25,14 @@
       e.preventDefault();
       const user = document.getElementById('username').value.trim();
       const pass = document.getElementById('password').value;
-
       const messageBox = document.getElementById('message');
 
       if (user === 'admin' && pass === 'password123') {
-        messageBox.textContent = '✅ Login successful!';
+        messageBox.textContent = '✅ Login successful! Redirecting...';
         messageBox.className = 'message success';
+        setTimeout(() => {
+          window.location.href = 'dashboard.html';
+        }, 1000); // 1-second delay
       } else {
         messageBox.textContent = '❌ Incorrect username or password.';
         messageBox.className = 'message error';
